# esp-rgb-panel-480x480

./: flash_16MB.csv  flash_8MB.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  gt911.c  gt911.h  idf_component.yml  lvgl_interface.c  lvgl_interface.h  main.c  p_wifi_sta.c  p_wifi_sta.h  st7701s.c  st7701s.h
