idf_component_register(SRCS 
                        "main.c" 
                        "st7701s.c"  
                        "gt911.c"
                        "lvgl_interface.c"
                        "p_wifi_sta.c"
                       INCLUDE_DIRS
                        "."
                        )
